styles.css
:root {
  /* Sizing */
  --s-xs: clamp(0.91rem, calc(0.89rem + 0.1vw), 0.96rem);
  --s-s: clamp(1.09rem, calc(1.05rem + 0.21vw), 1.2rem);
  --s-m: clamp(1.31rem, calc(1.24rem + 0.37vw), 1.5rem);
  --s-l: clamp(1.58rem, calc(1.46rem + 0.59vw), 1.88rem);
  --s-xl: clamp(1.89rem, calc(1.71rem + 0.89vw), 2.34rem);
  --s-xxl: clamp(2.27rem, calc(2.01rem + 1.29vw), 2.93rem);
  /* font family */
  --ff-main: 'Roboto', sans-serif;
  /* font weight */
  --fw-light: 300;
  --fw-reg: 400;
  --fw-bold: 700;
  /* colours */
  --light-shade: #e4e4e7;
  --medium-shade: #9ca3af;
  --dark-shade: #78797a;
  --bright: #e4e5e6;
  --light-highlight: #6d28d9;
  --dark-highlight: #6d28d9;
  --shadow-full: 0 0 5px var(--dark-shade);
  --shadow-bottom: 2px 1px 3px var(--dark-shade);
  --text-bold: #27272a;
  --text-light: ;
}

body {
  box-sizing: border-box;
  font-family: var(--ff-main);
  width: 100%;
  height: 100%;
  min-height: 100vh;
  display: grid;
  grid-template-columns: max-content 1fr;
  grid-template-areas:
    'nav header'
    'nav main';
}

body.dark {
  --light-shade: #3f3f46;
  --medium-shade: #18181b;
  --dark-shade: #0f172a;
  --bright: #e2e8f0;
  --light-highlight: #4c1d95;
  --dark-highlight: #4c1d95;
  --shadow-full: 0 0 5px var(--bright);
  --shadow-bottom: 2px 1px 3px var(--bright);
  --text-bold: #ced1d4;
  --text-light: ;
}

h3 {
  font-size: var(--s-m);
  color: var(--text-bold);
  font-weight: var(--fw-reg)
}

/* Header*/

header {
  grid-area: header;
  display: grid;
  grid-template-columns: 3fr 2fr;
  padding: 1rem 2rem;
  background-color: var(--light-shade);
  position: relative;
  box-shadow: var(--shadow-bottom);
}

.header-search {
  display: flex;
  align-items: center;
  gap: var(--s-m);
}

.header-search i {
  font-size: var(--s-m);
  color: var(--text-bold);
}

.header-search-input {
  border: 1px solid var(--text-bold);
  border-radius: 10px;
  height: var(--s-m);
  width: 60%;
  outline: 0;
  background-color: var(--medium-shade);
  color: var(--text-bold);
}

.header-user-profile {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: var(--s-m);
}

.header-user-profile i {
  font-size: var(--s-m);
  color: var(--text-bold);
}

.header-profile-img {
  border-radius: 50%;
  max-height: 50px;
  width: 50px;
  border: 2px solid var(--text-bold);
  overflow: hidden;
}

.header-profile-img img {
  display: block;
  width: 100%;
  height: 4rem;
  object-fit: cover;
}

.header-profile-username {
  font-size: var(--s-s);
  font-weight: var(--fw-bold);
  color: var(--text-bold);
}

.header-welcome {
  display: flex;
  align-items: center;
  gap: 2rem;
}

.header-welcome-img {
  border-radius: 50%;
  height: 5rem;
  width: 5rem;
  border: 2px solid var(--text-bold);
  overflow: hidden;
}

.header-welcome-img img {
  display: block;
  height: 6rem;
  width: 100%;
  object-fit: cover;
}

.welcome-text-container {
  font-weight: var(--fw-bold);
}

.welcome-small-text {
  font-size: 1rem;
  margin-bottom: -20px;
  color: var(--text-bold);
}

.welcome-large-text {
  font-size: var(--s-m);
  color: var(--text-bold);
}
.header-buttons {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: var(--s-m);
}

.header-button {
  display: flex;
  justify-content: center;
  align-items: center;
  height: var(--s-l);
  width: auto;
  padding: var(--s-xs);
  border: 2px solid var(--bright);
  border-radius: 0.5em;
  text-decoration: none;
  font-weight: var(--fw-reg);
  color: var(--bright);
  background-color: var(--light-highlight);
  box-shadow: var(--shadow-full);
}

.header-button:hover {
  transform: scale(1.1);
  cursor: pointer;
}

/* Nav */

nav {
  grid-area: nav;
  background-color: var(--light-highlight);
  padding: var(--s-xs);
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: flex-start;
  gap: var(--s-xs);
  border: 1px solid var(--dark-shade);
}

.nav-hamburger {
  align-self: flex-end;
}

.nav-hamburger i {
  font-size: var(--s-l);
}

.nav-title {
  display: flex;
  align-items: center;
  justify-content: center;
}

.nav-title i {
  font-size: var(--s-xl);
}

.nav-title-text {
  font-size: var(--s-l);
  font-weight: var(--fw-bold);
  color: var(--bright);
  padding: 0.5rem;
  display: block;
}

.nav-main-icons-container,
.nav-secondary-icons-container {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: flex-start;
  list-style: none;
  padding-left: 0;
}

.nav-icon {
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 0.2rem;
}

.nav-text:hover {
  cursor: pointer;
  border-bottom: 2px solid var(--dark-shade);
}

.nav-icon:hover .nav-text,
.nav-title:hover .nav-title-text,
.nav-title:hover i,
.nav-icon:hover i,
.nav-hamburger:hover i {
  color: var(--dark-shade);
  cursor: pointer;
}

.nav-text {
  font-size: var(--s-s);
  font-weight: var(--fw-bold);
  color: var(--bright);
  padding: 0.5rem;
  display: block;
}

nav i {
  font-size: var(--s-m);
  color: var(--bright);
}

.darkmode-switch {
  background-color: var(--light-highlight);
  outline: none;
  border: none;
  padding: 0;
}

/* Main section*/

main {
  background-color: var(--medium-shade);
  grid-area: main;
  display: grid;
  grid-template-columns: auto 300px;
  grid-template-rows: auto;
  grid-template-areas:
    'projects announcements'
    'projects trending';
}

/* Projects section */

.projects {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
  grid-auto-rows: min-content;
  gap: 1rem;
  padding: 1rem;
}

.projects-title {
  grid-column: 1/-1;
}

.projects-card {
  background-color: var(--light-shade);
  display: flex;
  flex-direction: column;
  box-shadow: var(--shadow-full);
  border-radius: 0.5em;
  padding: 0.5rem;
  border-left: 0.4rem solid var(--light-highlight);
  position: relative;
}

.projects-card:hover {
  transform: scale(1.01);
  transition: 0.5s;
}

.projects-card-text {
  color: var(--text-bold);
}

.projects-card-title {
  font-weight: var(--fw-bold);
  font-size: var(--s-s);
}

.projects-card-description {
  font-size: var(--s-xs);
}

.projects-card-button-container {
  display: flex;
  justify-content: flex-end;
}

.projects-card-button {
  text-decoration: none;
  border: none;
  background-color: var(--light-shade);
}

.projects-card-button i {
  color: var(--text-bold);
}

/* Announcement section */

.announcements {
  grid-area: announcements;
  padding: 1rem;
}

.announcements-container {
  background-color: var(--light-shade);
  box-shadow: var(--shadow-full);
  border-radius: 0.5em;
  padding: 1rem;
  margin-top: 2.5rem;
}

.announcements-element:nth-child(2),
.announcements-element-one {
  border-bottom: 1px solid var(--text-bold);
}

.announcements-bold-text {
  font-size: var(--s-xs);
  font-weight: var(--fw-bold);
  color: var(--text-bold);
}

.announcements-description-text {
  font-size: var(--s-xs);
  color: var(--text-bold);
}

/* Trending section */

.trending {
  grid-area: trending;
  padding: 1rem;
}

.trending-container {
  background-color: var(--light-shade);
  box-shadow: var(--shadow-full);
  padding: 1rem;
  border-radius: 0.5em;
}

.trending-element {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  gap: 1rem;
}

.trending-element a {
  text-decoration: none;
  color: var(--text-bold);
}

.trending-description a:hover {
  cursor: pointer;
  color: var(--dark-highlight);
}

.trending-em-img {
  border-radius: 50%;
  max-height: 50px;
  width: 50px;
  border: 2px solid var(--text-bold);
  overflow: hidden;
}

.trending-em-img img {
  display: block;
  width: 100%;
  height: 3rem;
  object-fit: cover;
}

.trending-em-text {
  color: var(--text-bold);
  padding: 0;
}

.trending-username {
  margin-bottom: -10px;
}

.trending-description {
  font-size: var(--s-xs);
}

/* media queries */

@media only screen and (max-width: 880px) {
  .nav-title-text {
    display: none;
  }

  .nav-text {
    display: none;
  }
}

@media only screen and (max-width: 880px) {
  .header-welcome {
    display: none;
  }
  .header-buttons {
    grid-column: 1/-1;
  }
}

@media only screen and (max-width: 700px) {
  header {
    grid-template-columns: 1fr;
    align-items: center;
    justify-items: center;
    gap: 0.5rem;
  }

  .header-search {
    margin-left: 3rem;
  }
  main {
    grid-template-columns: min-content;
    grid-template-areas:
      'projects'
      'announcements'
      'trending';
    justify-content: center;
  }
  .projects {
    grid-template-columns:1fr;
    width: 75vw;
  }
}

